force-app/main/default/objects/Vendor_Data_Management_with_Equipment__c.object
<CustomObject>
    <fields>
        <fullName>Discipline__c</fullName>
        <label>Discipline</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Discipline</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vendor_Data_File_C__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>ไฟล์ข้อมูล Vendor Data ของ Equipment</inlineHelpText>
        <label>Vendor Data File</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vendor_Data_File_URL__c</fullName>
        <formula>IF(Vendor_Data_File__c == null, &quot;No File&quot; ,HYPERLINK(Vendor_Data_File__c, &quot;Open File&quot;,&quot;_self&quot;))</formula>
        <label>Vendor Data File URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Data_File__c</fullName>
        <label>Vendor Data File</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Data_Management__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor Data Management</label>
        <referenceTo>Vendor_Data_Management__c</referenceTo>
        <relationshipName>Vendor_Data_Management_with_Equipment</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Vendor Data Management with Equipment*</label>
    <nameField>
        <label>Equipment Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>